tests/NormalTests/paczka1/fuzzy1/63423632.err
Error in line 2: PMZ2f A71 54,2
Error in line 16: A342 A342 16,5
Error in line 15: 86tpLzUPwTB A71 17,5
Error in line 24: 86tpLzUPwTB A227 91,3
Error in line 25: 86tpLzUPwTB A71 12,8
Error in line 26: 86tpLzUPwTB S277 12,8
